home plus components

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -2,3 +2,11 @@
 @import "alert";
 @import "avatar";
 @import "navbar";
+@import "social_tiles";
+@import "home_footer_infos";
+@import "home_footer";
+@import "banner";
+@import "background_color";
+@import "home_card";
+@import "search_form";
+@import "home_loader";
