--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,7 @@
 <%= render 'shared/banner' %>
+
 <div class='home-cards'>
+  <%= render 'shared/home_card' %>
   <%= render 'shared/home_card' %>
   <%= render 'shared/home_card' %>
   <%= render 'shared/home_card' %>
