--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,11 +1,12 @@
 // Import your components CSS files here.
 @import "alert";
 @import "avatar";
-@import "navbar";
-@import "social_tiles";
-@import "home_footer";
+@import "background_color"; // CHECK COMMENT ON PEUT LE METTRE AILLEURS POUR QUE CE SOIT PLUS PROPRE
 @import "banner";
-@import "background_color";
 @import "home_card";
-@import "search_form";
+@import "home_footer";
 @import "home_loader";
+@import "like_button";
+@import "navbar";
+@import "search_form";
+@import "social_tiles";
