update on cards

--- a/app/views/shared/_home_card.html.erb
+++ b/app/views/shared/_home_card.html.erb
@@ -1,19 +1,16 @@
 <div class="card">
   <h3 class="title">Card 1</h3>
-  <%= render 'shared/like_button'%>
+  <%= render 'shared/star_button'%>
   <div class="bar">
     <div class="emptybar"></div>
     <div class="filledbar"></div>
   </div>
-  <div class="circle">
-    <svg version="1.1" xmlns="http://www.w3.org/2000/svg">
-      <circle class="stroke" cx="60" cy="60" r="50"/>
-    </svg>
+  <div class="event-picture">
+    <img src="https://images.unsplash.com/photo-1513670144176-2211a82b531f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2100&q=80" alt="">
   </div>
-
   <ul class="infos">
-    <li><i class="far fa-user text-light"></i></li>
-    <li><i class="far fa-calendar-alt text-light"></i></li>
-    <li><i class="fab fa-houzz text-light"></i></li>
+    <li><i class="far fa-user text-light"></i>Mall Grab | Dan Shake | Laurent Garnier | ... </li>
+    <li><i class="far fa-calendar-alt text-light"></i>Wednesday, 26th February, 2020</li>
+    <li><i class="fab fa-houzz text-light"></i>Open-air</li>
   </ul>
 </div>
