--- a/app/assets/stylesheets/components/_home_card.scss
+++ b/app/assets/stylesheets/components/_home_card.scss
@@ -1,7 +1,7 @@
 .card {
   display: flex;
-  height: 280px;
-  width: 200px;
+  height: 560px;
+  width: 400px;
   background-color: #17141d;
   border-radius: 10px;
   box-shadow: -1rem 0 3rem #000;
@@ -31,8 +31,8 @@
 
 .bar {
   position: absolute;
-  top: 100px;
-  left: 20px;
+  top: calc(100% - 280px);
+  left: 40px;
   height: 5px;
   width: 150px;
 }
@@ -59,21 +59,28 @@
   transition: 0.4s ease-out;
 }
 
-.circle {
-  position: absolute;
-  top: 150px;
-  left: calc(50% - 60px);
+.event-picture {
+  img {
+    left: calc(50%-20px);
+    width: 100%;
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
+  }
 }
 
 .infos {
   position: absolute;
-  top: 150px;
-  left: 0px;
-  padding: 20px;
-  // left: calc(50% - 60px);
+  top: calc(100% - 200px);
 
   li {
     list-style:none;
+    padding-bottom: 20px;
+    color:white;
+    font-size: 13px;
+  }
+
+  i {
+    padding-right: 10px;
   }
 }
 
