--- a/app/assets/stylesheets/components/_like_button.scss
+++ b/app/assets/stylesheets/components/_like_button.scss
@@ -1,10 +1,10 @@
-.heart-button {
+.star-button {
     cursor: pointer;
     border-radius: 50%;
     width: 40px;
     height: 40px;
     position: absolute;
-    left:145px;
+    left: calc(100% - 50px);
     top: 10px;
 
   &:hover {
@@ -18,12 +18,12 @@
   }
 }
 
-.heart-button .fas{
+.star-button .fas{
   text-justify: center;
   text-align: center;
   font-size: 25px;
   border-radius:50%;
-  padding: 10px;
+  padding: 5px;
   background: #17141D;
   color: #22262A;
   box-shadow: 3px 3px 3px #070911, -3px -3px 3px #22262a;
