--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -3,10 +3,13 @@
 @import "avatar";
 @import "background_color"; // CHECK COMMENT ON PEUT LE METTRE AILLEURS POUR QUE CE SOIT PLUS PROPRE
 @import "banner";
+@import "calendar";
+@import "check_box";
 @import "home_card";
 @import "home_footer";
 @import "home_loader";
 @import "like_button";
 @import "navbar";
 @import "search_form";
+@import "sidenav";
 @import "social_tiles";
