--- a/app/assets/stylesheets/pages/_party_show.scss
+++ b/app/assets/stylesheets/pages/_party_show.scss
@@ -28,3 +28,11 @@ i {
 .listen-and-social-medias {
   display: flex;
 }
+
+.soundcloud-player {
+  width: 50%;
+}
+
+.social-media-card {
+  width: 50%;
+}
