--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -9,6 +9,7 @@
 
 .navbar-lewagon .navbar-brand img {
   width: 40px;
+  margin-left: 10px;
 }
 
 .navbar-lewagon a {
@@ -16,6 +17,7 @@
   padding-left: 10px;
   color: $gray;
   font-weight: 200;
+  padding-right: 10px;
 }
 
 
