--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
-  <a class="navbar-brand" href="#">
-    <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/logo.png" />
+  <a class="navbar-brand" href="/">
+    <%= image_tag 'techno2U.png'%>
 </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -13,9 +13,8 @@
         <%= link_to 'Home', root_path %>
       </li>
 
-      <!-- CHANGE THE PATH FOR THE PARTIES -->
       <li class="nav-item">
-        <%= link_to 'Parties', root_path  %>
+        <%= link_to 'Parties', parties_path  %>
       </li>
 
       <% if current_user.nil?  %>
@@ -34,8 +33,10 @@
         <li class="nav-item dropdown">
           <img class="avatar dropdown-toggle" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" src="https://kitt.lewagon.com/placeholder/users/ssaunier" />
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+            <!-- CHANGE THE PATH FOR THE PROFILE -->
             <a class="dropdown-item" href="#">My Profile</a>
-            <a class="dropdown-item" href="#">Log-out</a>
+            <%= link_to "Settings", edit_user_registration_path, class: "dropdown-item" %>
+            <%= link_to "Log-out", destroy_user_session_path, method: :delete , class: "dropdown-item" %>
           </div>
         </li>
       <% end %>
