--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,9 @@
 <%= render 'shared/banner' %>
+<% @soundclouds.each do |soundcloud| %>
+  <% soundcloud.sounds_ids.each do |id| %>
+    <%= render 'shared/soundcloud_player', soundcloud_id: "#{id}" %>
+  <% end %>
+<% end %>
 
 <div class='home-cards'>
   <%= render 'shared/home_card' %>
