page show dégrossie

--- a/app/assets/stylesheets/pages/_party_show.scss
+++ b/app/assets/stylesheets/pages/_party_show.scss
@@ -27,6 +27,7 @@ i {
 
 .listen-and-social-medias {
   display: flex;
+  margin: 10px 0;
 }
 
 .soundcloud-player {
@@ -35,4 +36,8 @@ i {
 
 .social-media-card {
   width: 50%;
+}
+
+.container-party-show {
+  width: 80%;
 }
