--- a/app/views/parties/show.html.erb
+++ b/app/views/parties/show.html.erb
@@ -1,12 +1,16 @@
 <%= render 'shared/party_banner' %>
 
-<div class="container-party-show">
+<div class="container container-party-show">
   <h1> <%= @party.name %> </h1>
 
   <div class="artists-lineup">
     <i class="far fa-user text-light"></i>
     <div class="artists-lineup-infos">
-      <h2> Mettre la liste des artistes </h2>
+      <h2>
+        <% @party.artists.each do |artist| %>
+          <%= artist.name %>
+        <% end %>
+      </h2>
     </div>
   </div>
 
@@ -20,11 +24,17 @@
 
   <div class="listen-and-social-medias">
     <div class="soundcloud-player">
-
+      <h2>Listen on Soundcloud</h2>
     </div>
     <div class="social-media-card">
-      <a href="">Send on Facebook</a>
-      <a href="">Share on Facebook</a>
+      <h2>Social Medias</h2>
+
+      <!-- Share button code -->
+      <div class="fb-share-button"
+        data-href="http://localhost:3000/parties/<%= @party.id %>"
+        data-layout="button_count"
+        data-size="large"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Share the event</a>
+      </div>
     </div>
   </div>
 
