navbar update + audio quizz + js related

--- a/app/assets/stylesheets/components/_home_card.scss
+++ b/app/assets/stylesheets/components/_home_card.scss
@@ -63,6 +63,7 @@
   img {
     left: calc(50%-20px);
     width: 100%;
+    object-fit: cover;
     border-top-right-radius: 10px;
     border-top-left-radius: 10px;
   }
