profile dashboard implemented

--- a/app/assets/stylesheets/pages/_party_show.scss
+++ b/app/assets/stylesheets/pages/_party_show.scss
@@ -1,8 +1,8 @@
-h1, h2, h3, p, i {
+.container-party-show h1, h2, h3, p, i {
   color: white;
 }
 
-i {
+.container-party-show i {
   font-size: 30px;
 }
 
