added notif button in the nav bar + changer red color

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,7 +1,7 @@
 // Define variables for your color scheme
 
 // For example:
-$red: #FD1015;
+$red: #A6131B;
 $blue: #167FFB;
 $yellow: #FFC65A;
 $orange: #F6B101;
