--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -39,6 +39,7 @@
             <span class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               <i class="far fa-bell" id="bell"></i>
             </span>
+            <i class="fas fa-circle text-danger"></i>
 
 
             <div class="dropdown-menu dropdown-menu-right border border-light" id="notification">
