event-card sur la show de profile clean

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -27,7 +27,7 @@
       <!-- CHANGE THE PATH FOR THE PROFILE -->
       <% else %>
         <li class="nav-item">
-          <%= link_to 'Profile', new_user_registration_path  %>
+          <%= link_to 'Profile', profile_path(@user)  %>
         </li>
 
         <li class="nav-item">
