--- a/app/assets/stylesheets/components/_profile_card.scss
+++ b/app/assets/stylesheets/components/_profile_card.scss
@@ -1,111 +1,66 @@
 .profile-card {
-  display: flex;
-  justify-content: space-between;
-  height: 340px;
-  width: 100%;
+  position: relative;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  margin-bottom: 20px;
   background-color: #17141d;
-  border-radius: 10px;
   box-shadow: -1rem 0 3rem #000;
   transition: 0.4s ease-out;
-  position: relative;
-  left: 0px;
-  margin: 10px 0;
+  border-radius: 10px;
+  height: 220px;
 }
 
-.card:hover {
+.profile-card:hover {
   transform: translateY(-20px);
   transition: 0.4s ease-out;
 }
 
-.card:hover ~ .card {
+.profile-card:hover ~ .card {
   position: relative;
   left: 50px;
   transition: 0.4s ease-out;
 }
 
-.title {
+.profile-card-middle {
+  display: flex;
+  align-items: center;
+  ul {
+    margin-bottom: 0;
+  }
+}
+
+.profile-card-right {
+  display: flex;
+  align-items: center;
+}
+
+.profile-card-left img {
+  width: 100%;
+  height: 100%;
+  max-height: 220px;
+  object-fit: cover;
+  border-radius: 10px;
+}
+
+
+.profile-card-infos {
+  li {
+    list-style:none;
+    padding-bottom: 20px;
+    color:white;
+    font-size: 13px;
+  }
+
+  i {
+    padding-right: 10px;
+  }
+}
+
+.profile-card-title {
   color: white;
   font-weight: 300;
   position: absolute;
   left: 20px;
   top: 15px;
 }
-
-.bar {
-  position: absolute;
-  top: calc(100% - 280px);
-  left: 40px;
-  height: 5px;
-  width: 150px;
-}
-
-.emptybar {
-  background-color: #2e3033;
-  width: 100%;
-  height: 100%;
-}
-
-.filledbar {
-  position: absolute;
-  top: 0px;
-  z-index: 3;
-  width: 0px;
-  height: 100%;
-  background: rgb(0,154,217);
-  background: linear-gradient(90deg, rgba(0,154,217,1) 0%, rgba(217,147,0,1) 65%, rgba(255,186,0,1) 100%);
-  transition: 0.6s ease-out;
-}
-
-.card:hover .filledbar {
-  width: 120px;
-  transition: 0.4s ease-out;
-}
-
-.image {
-  border-radius: 10px;
-  width:  300px;
-  height: 200px;
-  bottom: 10px;
-  left: 10px;
-  position: absolute;
-}
-
-
-.stroke {
-  stroke: white;
-  stroke-dasharray: 360;
-  stroke-dashoffset: 360;
-  transition: 0.6s ease-out;
-}
-
-svg {
-  fill: #17141d;
-  stroke-width: 2px;
-}
-
-.card:hover .stroke {
-  stroke-dashoffset: 100;
-  transition: 0.6s ease-out;
-}
-
-.profil-card-left {
-  display: flex;
-  flex-direction: column;
-  width: 40%;
-}
-
-.profil-card-middle {
-  width: 40%;
-}
-
-.profil-card-right {
-  text-align: right;
-  width: 20%;
-  p {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-  }
-}
-
 
