--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -36,11 +36,10 @@
 
         <li class="nav-item">
           <div class="group">
-            <span class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <div class="bell-and-notif dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               <i class="far fa-bell" id="bell"></i>
-            </span>
-            <i class="fas fa-circle text-danger"></i>
-
+              <i class="fas fa-circle text-danger"></i>
+            </div>
 
             <div class="dropdown-menu dropdown-menu-right border border-light" id="notification">
               <i class="fas fa-poll"><%= link_to 'Take the preference quizz to help us finding you the best parties for you', new_preference_path %></i>
