--- a/app/views/parties/index.html.erb
+++ b/app/views/parties/index.html.erb
@@ -29,7 +29,9 @@
       </li>
     </ul>
     <div class='container'>
-
+      <% @parties.each do |party| %>
+        <%= render 'shared/profile_card', party: party %>
+      <% end %>
     </div>
   </div>
 </div>
