--- a/app/views/shared/_audio_quizz_card.html.erb
+++ b/app/views/shared/_audio_quizz_card.html.erb
@@ -1,7 +1,7 @@
 <div class="audio-quizz-card">
 
   <div class='soundcloud-player-audio-quizz'>
-    <%= render 'shared/soundcloud_player', soundcloud_id: "#{@soundclouds.sounds_ids.first}" %>
+    <%= render 'shared/soundcloud_player', soundcloud_id: soundcloud_id %>
   </div>
 
   <div class="album-picture">
