--- a/app/views/shared/_profile_card.html.erb
+++ b/app/views/shared/_profile_card.html.erb
@@ -16,7 +16,7 @@
   </div>
 
   <div class="profile-card-right">
-    <% @soundclouds.each do |soundcloud| %>
+    <% @soundcloud.each do |soundcloud| %>
       <%= render 'shared/soundcloud_player', soundcloud_id: "#{soundcloud.sounds_ids.first}" %>
     <% end %>
   </div>
