parties index resolved

--- a/app/views/shared/_profile_card.html.erb
+++ b/app/views/shared/_profile_card.html.erb
@@ -16,9 +16,6 @@
   </div>
 
   <div class="profile-card-right">
-    <% @soundcloud.each do |soundcloud| %>
-      <%= render 'shared/soundcloud_player', soundcloud_id: "#{soundcloud.sounds_ids.first}" %>
-    <% end %>
+    <%= render 'shared/soundcloud_player', soundcloud_id: track %>
   </div>
-
 </div>
