upgraded cards to redirect to the show

--- a/app/assets/stylesheets/components/_profile_card.scss
+++ b/app/assets/stylesheets/components/_profile_card.scss
@@ -8,6 +8,10 @@
   transition: 0.4s ease-out;
   border-radius: 10px;
   height: 220px;
+
+  a {
+    text-decoration: none;
+  }
 }
 
 .profile-card:hover {
