--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -12,7 +12,9 @@
 
   <div class="container">
     <% @user.parties.each_with_index do |party, index| %>
+      <%= link_to party_path(party), class: "link-no-underline" do %>
         <%= render 'shared/profile_card', party: party, track: @track_ids[index] %>
+      <% end %>
     <% end %>
   </div>
 </div>
