display 3 parties in index + display soundcloud in show

--- a/app/assets/stylesheets/components/_party_banner.scss
+++ b/app/assets/stylesheets/components/_party_banner.scss
@@ -1,8 +1,8 @@
 .party-banner {
   background-size: cover;
-  background-position: center;
-  padding: 150px 0;
-}
+  background-position: top;
+  height: 500px;
+  }
 
 .party-banner h1 {
   margin: 0;
