--- a/app/views/parties/index.html.erb
+++ b/app/views/parties/index.html.erb
@@ -29,7 +29,7 @@
       </li>
     </ul>
     <div class='container'>
-      <% @parties.each_with_index do |party, index| %>
+      <% @parties.first(3).each_with_index do |party, index| %>
         <%= link_to party_path(party), class: "link-no-underline" do %>
           <%= render 'shared/profile_card', party: party, track: @track_ids[index] %>
         <% end %>
