--- a/app/views/shared/_profile_card.html.erb
+++ b/app/views/shared/_profile_card.html.erb
@@ -3,7 +3,7 @@
 
   <div class="profile-card-left">
     <h3 class="profile-card-title"><%= party.name.truncate(20) %></h3>
-    <img src="https://images.unsplash.com/photo-1513670144176-2211a82b531f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2100&q=80" class="image" alt="Event Image">
+    <img src="https://www.residentadvisor.net<%= party.image_url %>" class="image" alt="Event Image">
 
   </div>
 
