artist show, add cards for coming parties

--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -3,6 +3,7 @@
 @import "party_show";
 @import "profile_show";
 @import "preferences_new";
+@import "artist_show";
 
 .index-page{
   display: grid;
