--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -1,7 +1,21 @@
-<h1>Listen to <%=  @artist.name %></h1>
+<div class="container container-artist-show">
+  <h1><%=  @artist.name %></h1>
 
-<div class="container">
+  <h2>Next events (3 out of <%= @artist.parties.size %>)</h2>
+  <div class="d-flex flex-row flex-wrap justify-content-between">
+    <% if @artist.parties.size > 2 %>
+      <% @artist.parties.first(3).each do |party| %>
+        <%= render 'shared/party_card', party: party %>
+      <% end %>
+    <% else %>
+     <% @artist.parties.each do |party| %>
+        <%= render 'shared/party_card', party: party %>
+      <% end %>
+    <% end %>
+  </div>
+
+<h2>Listen to <%= @artist.name %></h2>
   <% @soundcloud.sounds_ids.each do |id| %>
       <%= render 'shared/soundcloud_player', soundcloud_id: "#{id}" %>
-    <% end %>
+  <% end %>
 </div>
