back done, need to find pretty front

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -19,4 +19,5 @@
 @import "party_banner";
 @import "profile_card";
 @import "sidenav_show_profile";
-@import "party_card"
+@import "party_card";
+@import "link";
