--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,8 +3,10 @@
 
 <div class="container">
   <div class='home-cards'>
-    <%= render 'shared/home_card' %>
-    <%= render 'shared/home_card' %>
-    <%= render 'shared/home_card' %>
+    <% Party.last(3).each do |party| %>
+      <%= link_to party_path(party), class: "link-without-style" do  %>
+        <%= render 'shared/home_card', party: party%>
+      <% end %>
+    <% end %>
   </div>
 </div>
