--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -4,6 +4,9 @@
     <h1>Techno2U</h1>
     <%= render 'shared/home_loader' %>
     <h3>Find easily the best music event for you</h3>
-    <%= render 'shared/search_form' %>
+    <div class="call-to-action">
+      <button class="btn btn-secondary">Audio Quizz</button>
+      <button class="btn btn-primary">Find Parties</button>
+    </div>
   </div>
 </div>
