--- a/app/assets/stylesheets/components/_home_card.scss
+++ b/app/assets/stylesheets/components/_home_card.scss
@@ -27,6 +27,7 @@
   position: absolute;
   left: 20px;
   top: 15px;
+  text-shadow: 2px 2px #1D1C1C;
 }
 
 .bar {
@@ -62,6 +63,7 @@
 .event-picture {
   img {
     left: calc(50%-20px);
+    height: 240px;
     width: 100%;
     object-fit: cover;
     border-top-right-radius: 10px;
