--- a/app/views/shared/_home_card.html.erb
+++ b/app/views/shared/_home_card.html.erb
@@ -6,11 +6,16 @@
     <div class="filledbar"></div>
   </div>
   <div class="event-picture">
-    <img src="https://www.residentadvisor.net<%= party.image_url %>" alt="">
+    <img src="https://www.residentadvisor.net<%= party.image_url %>" onerror="this.src='https://images.unsplash.com/photo-1513670144176-2211a82b531f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80';" alt="Missing Image" />
   </div>
   <ul class="infos">
-    <li><i class="far fa-user text-light"></i><%= party.artists.first(3).each do |artist| p artist.name end %></li>
-    <li><i class="far fa-calendar-alt text-light"></i><%= party.start_date %> - <%= party.start_time %></li>
+    <li>
+      <i class="far fa-user text-light"></i>
+      <% party.artists.first(3).each do |artist| %>
+        <%= artist.name %>
+      <% end %>
+    </li>
+    <li><i class="far fa-calendar-alt text-light"></i><%= party.start_date %>  at  <%= party.start_time %></li>
     <li><i class="fab fa-houzz text-light"></i><%= party.venue_name %> - <%= party.venue_location %></li>
   </ul>
 </div>
