--- a/app/views/parties/show.html.erb
+++ b/app/views/parties/show.html.erb
@@ -1,8 +1,7 @@
-<!-- <%= render 'shared/party_banner', party: @party %> -->
+<%= render 'shared/party_banner', party: @party %>
 
 <div class="container container-party-show">
   <h1 class ="mt-4"> <%= @party.name %> </h1>
-
   <div class="artists-lineup">
     <i class="far fa-user text-light"></i>
     <div class="artists-lineup-infos">
@@ -13,7 +12,6 @@
       </h2>
     </div>
   </div>
-
   <div class="date-and-place">
     <i class="far fa-calendar-alt text-light"></i>
     <div class="date-and-place-infos">
@@ -21,35 +19,32 @@
       <p> <%= @party.venue_location %> </p>
     </div>
   </div>
-
-  <div class="listen-and-social-medias">
-    <div class="soundcloud-player p-3">
-      <h2>Listen on Soundcloud</h2>
-      <select id="artist_selector" class="select2 select_artist" name="artist">
-        <% @party.artists.each do |artist| %>
-          <option value="<%=  artist.name %>"><%= artist.name %></option>
+  <div class="container">
+    <div class="row">
+      <div class="col-8 soundcloud-player p-3">
+        <h2>Who's playing? </h2>
+        <select id="artist_selector" class="select2 select_artist" name="artist">
+          <% @party.artists.each do |artist| %>
+            <option value="<%=  artist.name %>"><%= artist.name %></option>
+          <% end %>
+        </select>
+        <% @track_ids.each_with_index do |track, index| %>
+          <div id="<%= @party.artists[index].name %>" class="d-none soundcloud_player_show mt-4">
+            <%= render 'shared/soundcloud_player', soundcloud_id: track %>
+          </div>
         <% end %>
-      </select>
-      <% @track_ids.each_with_index do |track, index| %>
-        <div id="<%= @party.artists[index].name %>" class="d-none soundcloud_player_show">
-          <h3><%= @party.artists[index].name %></h3>
-          <%= render 'shared/soundcloud_player', soundcloud_id: track %>
-        </div>
-      <% end %>
-    </div>
-    <div class="social-media-card p-3">
-      <h2>Social Medias</h2>
-
-      <!-- Share button code -->
-      <div class="fb-share-button"
-        data-href="http://localhost:3000/parties/<%= @party.id %>"
-        data-layout="button_count"
-        data-size="large"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Share the event</a>
+          <div class="social-media-card p-3">
+            <!-- Share button code -->
+            <div class="fb-share-button"
+              data-href="http://localhost:3000/parties/<%= @party.id %>"
+              data-layout="button_count"
+              data-size="large"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Share the event</a>
+            </div>
+          </div>
+      </div>
+      <div class="col-4 map"  id="map" style="width: 100%; height: 300px;" data-markers="<%= @markers.to_json %>" data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
       </div>
     </div>
+
   </div>
-
-<!-- <div class="map"  id="map" style="width: 100%; height: 300px;" data-markers="<%= @markers.to_json %>" data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
-
-  </div> -->
 </div>
