--- a/app/views/shared/_home_footer.html.erb
+++ b/app/views/shared/_home_footer.html.erb
@@ -1,11 +1,17 @@
 <div class="home-footer container">
   <div class="home_footer_links">
     <ul class="blink-text-menu">
-      <li><a href="#">about</a></li>
-      <li><a href="#">carrier</a></li>
-      <li><a href="#">community</a></li>
-      <li><a href="#">contact</a></li>
+      <li class = "grid-element"><a href="#">about</a></li>
+      <li class = "grid-element"><a href="#">carrier</a></li>
+      <li class = "grid-element"><a href="#">community</a></li>
+      <li class = "grid-element"><a href="#">contact</a></li>
     </ul>
   </div>
-    <%= render 'shared/social_tiles' %>
+
+  <div class="social-media-links">
+    <a href="#"><i class="fab fa-facebook"></i></a>
+    <a href="#"><i class="fab fa-twitter"></i></a>
+    <a href="#"><i class="fab fa-instagram"></i></a>
+    <a href="#"><i class="fab fa-google-plus-g"></i></a>
+  </div>
 </div>
