--- a/app/assets/stylesheets/components/_home_footer.scss
+++ b/app/assets/stylesheets/components/_home_footer.scss
@@ -1,9 +1,24 @@
 .home-footer {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  display: flex;
   justify-content: space-between;
   align-item: center;
   width: 100%;
+}
+
+.social-media-links {
+  display: flex;
+  align-items: center;
+  font-size: 30px;
+  justify-content: space-around;
+  width: 100%;
+
+  i {
+    color: rgba(220, 220, 220, 0.3);
+  }
+
+  i:hover {
+    color: rgba(220, 220, 220, 1);
+  }
 }
 
 // ------------------------- Iformations --------------------------
