--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,11 +31,11 @@
     </script>
 
     <%= render 'shared/navbar' %>
-    <%= render 'shared/flashes' %>
 
-
-    <%= yield %>
-
+    <div class="global-container">
+      <%= render 'shared/flashes' %>
+      <%= yield %>
+    </div>
 
 
     <%= render 'shared/home_footer' %>
