adding artist to profile show, maintenant faut juste rajouter les macarons artiste, de la mise en forme en somme

--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -20,5 +20,14 @@
 
   <div class="container display-artists">
     <h2>Salut Salut !!</h2>
+
+    <% artistsList = [] %>
+    <% @user.parties.each do |party| %>
+      <% party.artists.each do |artist| %>
+        <% artistsList << artist.name %>
+      <% end %>
+      artistsList.map{|i| i.downcase}.uniq
+      <p> <%= artistsList %> </p>
+    <% end %>
   </div>
 </div>
