preparation de la liste des artistes pour le dashboard et cleaning de tous les forms qui etaient immondes

--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -4,6 +4,9 @@
 @import "profile_show";
 @import "preferences_new";
 @import "artist_show";
+@import "user_edit";
+@import "login";
+@import "signup";
 
 .index-page{
   display: grid;
