--- a/app/views/parties/index.html.erb
+++ b/app/views/parties/index.html.erb
@@ -3,33 +3,45 @@
     <i class="fas fa-bars text-light"></i>
     <ul class="sidenav-party-index-filters">
       <li>
-        <form>
+        <form method="get">
           <div class="form-group">
-            <input type="country" class="form-control" id="county" placeholder="Country">
+            <input name="location" type="country" class="form-control" id="county" placeholder="Where">
           </div>
-          <div class="form-group">
+<!--           <div class="form-group">
             <input type="region" class="form-control" id="county" placeholder="Region">
           </div>
           <div class="form-group">
             <input type="city" class="form-control" id="county" placeholder="City">
-          </div>
+          </div> -->
         </form>
       </li>
-      <li>
-        <%= render 'shared/checkboxes' %>
-      </li>
-      <li class='price-range'>
+      <div class="container">
+        <div class="form-wrapper" style="width: 250px; margin: 0 auto;">
+          <h2>Find your party</h2>
+
+          <%= simple_form_for :search, method: "get" do |f| %>
+            <%= f.input :location, as: :string, required: false, placeholder: "Where?", label: false %>
+            <%= f.input :start_date, as: :string, required: false, placeholder: "When?", input_html: {class: "datepicker"}, label: false %>
+            <%#= f.input :ends_at, as: :string, required: false, input_html: {class: "datepicker"} %>
+            <%= f.button :submit, "Find a party", class: "btn btn-light" %>
+          <% end %>
+        </div>
+      </div>
+ <!--      <li>
+        <%#= render 'shared/checkboxes' %>
+      </li> -->
+<!--       <li class='price-range'>
         <form>
           <label for="formControlRange">Price</label>
           <input type="range" class="form-control-range" id="formControlRange">
         </form>
-      </li>
+      </li> -->
       <li>
         <%= render 'shared/calendar' %>
       </li>
     </ul>
     <div class='container'>
-      <% @parties.first(3).each_with_index do |party, index| %>
+      <% @parties.each_with_index do |party, index| %>
         <%= link_to party_path(party), class: "link-no-underline" do %>
           <%= render 'shared/profile_card', party: party, track: @track_ids[index] %>
         <% end %>
@@ -37,3 +49,5 @@
     </div>
   </div>
 </div>
+
+<%= console %>
