quelques modif css

--- a/app/assets/stylesheets/pages/_profile_show.scss
+++ b/app/assets/stylesheets/pages/_profile_show.scss
@@ -1,6 +1,7 @@
 .profile-page-container {
   display: flex;
   margin: 20px 0;
+  color: white;
 }
 
 
@@ -12,4 +13,8 @@
 .profile-page-container a:hover {
   text-decoration: none;
   opacity: 0.7;
+}
+
+.title-profile-show {
+  margin: 10px 0 20px 0;
 }
