--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -11,6 +11,7 @@
   </div>
 
   <div class="container display-parties">
+    <h1 class= "title-profile-show">My parties attended</h1>
     <% @user.parties.each_with_index do |party, index| %>
       <%= link_to party_path(party), class: "link-no-underline" do %>
         <%= render 'shared/profile_card', party: party, track: @track_ids[index] %>
@@ -19,7 +20,7 @@
   </div>
 
   <div class="container display-artists">
-    <h2>Salut Salut !!</h2>
+    <h1 class= "title-profile-show">My artists</h1>
 
     <% artistsList = [] %>
     <% @user.parties.each do |party| %>
