--- a/app/views/parties/index.html.erb
+++ b/app/views/parties/index.html.erb
@@ -28,7 +28,7 @@
         <%= render 'shared/calendar' %>
       </li>
     </ul>
-    <div class='container'>
+    <div class='container container-parties-index'>
       <% @parties.first(3).each_with_index do |party, index| %>
         <%= link_to party_path(party), class: "link-no-underline" do %>
           <%= render 'shared/profile_card', party: party, track: @track_ids[index] %>
